# OOP_Lab8

Lab8/: CMakeLists.txt  localtrack.cpp  localtrack.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playlist.cpp  playlist.h  streamtrack.cpp  streamtrack.h  track.cpp  track.h
